--- a/ProyectoFinal-Aplicada2/Shared/MainLayout.razor
+++ b/ProyectoFinal-Aplicada2/Shared/MainLayout.razor
@@ -5,8 +5,9 @@
 </div>
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <a href="Usuarios">Registrarse</a>
         <a href="login">Login</a>
+        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         <BlazoredToasts />
     </div>
     <div class="content px-4">
