--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -284,6 +284,7 @@
         try
         {
             ventas.VentasDetalles.Remove(detalle);
+            CalcularTotalDeVenta();
         }
         catch (Exception)
         {
