--- a/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
@@ -283,6 +283,10 @@
                 TipoPago = TipoPago,
                 Pago = Pago
             });
+            Pago = 0;
+            TipoPago = string.Empty;
+            CompraId = string.Empty;
+            compras = new Compras();
 
         }
         CalcularPagoTotal();
