Las consultas ya no sacan todos los elementos cuando filtras por todos

--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
@@ -174,8 +174,10 @@ else
                 {
                     //Todos
                     case 0:
-                        listado = comprascontroller.GetList(p => true);
-                        Lista = listado;
+                        conteo = contexto.Compras.Count();
+                        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+                        Lista = comprascontroller.GetList(p => true);
+                        this.Lista = contexto.Compras.Take(paginacion.CantidadMostrar).ToList();
                         break;
                     //Int
                     case 1:
