--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -164,8 +164,10 @@ else
                 {
                     //Todos
                     case 0:
-                        listado = usuariocontroller.GetList(p => true);
-                        Lista = listado;
+                        conteo = Contexto.Compras.Count();
+                        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+                        Lista = usuariocontroller.GetList(p => true);
+                        this.Lista = Contexto.Usuarios.Take(paginacion.CantidadMostrar).ToList();
                         break;
                     //Id
                     case 1:
