--- a/ProyectoFinal-Aplicada2/Pages/ConultaVentas.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConultaVentas.razor
@@ -159,8 +159,10 @@ else
                 {
                     //Todos
                     case 0:
-                        listado = ventascontroller.GetList(p => true);
-                        Lista = listado;
+                        conteo = Contexto.Compras.Count();
+                        totaldepaginas = Math.Ceiling(conteo/paginacion.CantidadMostrar);
+                        Lista = ventascontroller.GetList(p => true);
+                        this.Lista = Contexto.Ventas.Take(paginacion.CantidadMostrar).ToList();
                         break;
 
                     //Id
