--- a/ProyectoFinal-Aplicada2/Pages/Index.razor
+++ b/ProyectoFinal-Aplicada2/Pages/Index.razor
@@ -1,72 +1,10 @@
 ﻿@page "/"
 <h1>Lindon y Huma</h1>
+<h5>Sistema de compra y ventas.</h5>
 
-    Sistema de compra y ventas.
-@*<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+<div class="container">
 
-    .form-register {
-        width: 400px;
-        background: #24303c;
-        padding: 30px;
-        margin: auto;
-        margin-top: 100px;
-        border-radius: 4px;
-        font-family: 'calibri';
-        color: white;
-        box-shadow: 7px 13px 37px #000;
-    }
+    <img src="~/Imagenes/Almacen.jpg" class="img-fluid" alt="Alternate Text" />
 
-    .form-register h4 {
-        font-size: 22px;
-        margin-bottom: 20px;
-    }
+</div>
 
-    .controls {
-        width: 100%;
-        background: #24303c;
-        padding: 10px;
-        border-radius: 4px;
-        margin-bottom: 16px;
-        border: 1px solid #0EBA25;
-        font-family: 'calibri';
-        font-size: 18;
-    }
-
-    .form-register p {
-        height: 40px;
-        text-align: center;
-        font-size: 18px;
-        line-height: 40px;
-    }
-
-    .form-register a {
-        color: white;
-    }
-
-    .form-register a:hover{
-        color: lime;
-        text-decoration: none;
-    }
-
-    .form-register .botons {
-        width: 380px;
-        background: #0EBA25;
-        border: none;
-        padding: 12px;
-        color: white;
-        margin: 16px 0;
-        font-size: 20px;
-    }
-</style>
-
-<section class="form-register">
-    <h4>Login</h4>
-    <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Usuario">
-    <input class="controls" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
-    <a class="botons" href="MenuChulo">Entrar</a>
-</section>*@
