La vaca ha llegado

--- a/ProyectoFinal-Aplicada2/Pages/Index.razor
+++ b/ProyectoFinal-Aplicada2/Pages/Index.razor
@@ -1,10 +1,9 @@
 ﻿@page "/"
-<h1>Lindon y Huma</h1>
-<h5>Sistema de compra y ventas.</h5>
 
 <div class="container">
-
-    <img src="~/Imagenes/Almacen.jpg" class="img-fluid" alt="Alternate Text" />
+    <h1>Lindon y Huma</h1>
+    <h5>Sistema de compra y ventas.</h5>
+    <img src="/Imagenes/FondoCooasar.png" class="img-fluid" alt="No Se Pudo Cargar" />
 
 </div>
 
